--- a/src/app/components/store/shop/shop.component.html
+++ b/src/app/components/store/shop/shop.component.html
@@ -260,7 +260,7 @@
                 <div class="custom-field">
                   <input type="number" id="showinput{{product.itemCode}}"  [(ngModel)]="product.extraQuantity"
                     *ngIf="product.quantityModel == '0'   || product.extraQuantity !=null"
-                    (change)="quantitychanged(product, $event.target.value)" class="form-control" />
+                    (change)="quantitychanged(product, $event.target.value)" class="form-control"  maxlength="3"  oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" />
                 </div>
               </div>
 
