--- a/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.css
+++ b/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.css
@@ -454,7 +454,13 @@ select {
 .card-infoo .form-group input.form-control {
     height: 50px;
 }
+.invalid-feedback-customclass {
 
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 80%;
+  color: #dc3545;
+}
 
 /* media  css */
 
