--- a/src/app/components/store/cart/cart.component.html
+++ b/src/app/components/store/cart/cart.component.html
@@ -94,7 +94,7 @@
                           </option>
                         </select>
                         <input type="number" style="margin-top: 10px;" id="showinput{{cartItem.itemCode}}"
-                          [(ngModel)]="cartItem.extraQuantity"
+                          [(ngModel)]="cartItem.extraQuantity"4
                           *ngIf="cartItem.quantityModel == '0' || cartItem.extraQuantity !=null "
                           (change)="quantitychanged(cartItem, $event.target.value)" class="form-control"> -->
                         <select (change)="
@@ -108,7 +108,7 @@
 
                         <input type="number" style="margin-top: 10px;" id="showinput{{cartItem.itemCode}}"
                           [(ngModel)]="cartItem.extraQuantity"
-                          *ngIf="cartItem.quantityModel == '0'||cartItem.quantityModel >10 || cartItem.extraQuantity !=null "
+                          *ngIf="cartItem.quantityModel == '0'||cartItem.quantityModel >10 "
                           (change)="quantitychanged(cartItem, $event.target.value)" class="form-control" maxlength="3" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                           [disabled]="cartItem.bundle=='specialOffer'">
 
@@ -130,7 +130,7 @@
                         </select>
                         <input type="number" style="margin-top: 10px;" id="showinput{{cartItem.itemCode}}"
                           [(ngModel)]="cartItem.extraQuantity"
-                          *ngIf="cartItem.quantityModel == '0'||cartItem.quantityModel >10 || cartItem.extraQuantity !=null "
+                          *ngIf="cartItem.quantityModel == '0'||cartItem.quantityModel >10  "
                           [disabled]="cartItem.bundle=='specialOffer'" 
                           (change)="quantitychanged(cartItem, $event.target.value)" class="form-control" maxlength="3"  oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
                       </div>
@@ -262,7 +262,7 @@
                         </select>
                         <input type="number" style="margin-top: 10px;" id="showinput{{delivery.itemCode}}"
                           [(ngModel)]="delivery.extraQuantity"
-                          *ngIf="delivery.quantityModel == '0' || delivery.extraQuantity !=null"
+                          *ngIf="delivery.quantityModel == '0' || delivery.quantityModel>10"
                           (change)="quantitychanged(delivery, $event.target.value)" class="form-control" maxlength="3"  oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
                       </div>
                     </div>
@@ -292,7 +292,7 @@
                       </select>
                       <input type="number" style="margin-top: 10px;" id="showinput{{delivery.itemCode}}"
                         [(ngModel)]="delivery.extraQuantity"
-                        *ngIf="delivery.quantityModel == '0' || delivery.extraQuantity !=null"
+                        *ngIf="delivery.quantityModel == '0' || delivery.quantityModel>10"
                         (change)="quantitychanged(delivery, $event.target.value)" class="form-control" maxlength="3"   oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
                     </div>
                     <p class="price-product">${{ delivery.Price | number:'.1-2' }}</p>
