--- a/src/app/components/store/product-detail/product-detail.component.html
+++ b/src/app/components/store/product-detail/product-detail.component.html
@@ -146,7 +146,7 @@
                           <!-- <h3>Customize Shipment <span class="ques-ico"><a href="#"><i class="fas fa-question" aria-hidden="true"></i></a></span></h3> -->
                           <div class="choose-shipping">
                               <div class="form-group">
-                                  <select id="islectedvalchanged"   [ngModel]="productDetail.quantityModel>10?'0':productDetail.quantityModel" (ngModelChange)="productDetail.quantityModel=$event" (change)="quantityForOneTime(productDetail, $event.target.value)"
+                                  <select id="islectedvalchanged"  (change)="quantityForOneTime(productDetail, $event.target.value)"
                                        class="form-control hidedropdownfeild">
                                       <option class="dropdown-item" disabled selected value="undefined">Select
                                           Quantity</option>
@@ -180,7 +180,7 @@
                           <div class="custom-field">
                               <input type="number" [showMaskTyped]="false"  mask="000" [dropSpecialCharacters]="false" id="showinput{{productDetail.itemCode}}"
                                   [(ngModel)]="productDetail.extraQuantity"
-                                  *ngIf="productDetail?.quantityModel ==0  || productDetail?.extraQuantity !=null"
+                                  *ngIf="productDetail?.quantityModel ==0  || productDetail?.quantityModel>10"
                                   (change)="quantitychanged(productDetail, $event.target.value)"  maxlength="3"  oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                   class="form-control" />
                           </div>
